# Apartment-Recommendation-Web-Scrapping-Google-Maps-API

./: .gitignore  README.md  app.py  development.md  ingestion.ipynb  pyproject.toml
Data/: ap_bcn_links.csv  spotahome_links.csv
Data/processed/: all_apartment_data.csv  housinganywhere_data.csv  rightmoves_data.csv
Data/raw/: apartmentsanywhere_data.csv  apartmentsanywhere_links.csv  housinganywhere_data.csv  rightmoves_data.csv  rightmoves_links.csv
Web Scrapping/: Idealista.py
homie/: menu.py  settings.py
homie/db/: engine.py  models.py  queries.py  sesion.py  session.py
homie/eda_and_cleaning/: eda_housinganywhere.py  eda_rightmoves.ipynb  eda_rightmoves.py  housinganywhere.ipynb
homie/files/: csv.py  generics.py  populate.py
homie/files/templates/: flats.csv
homie/googlemaps/: README.md  api.py  catalogs.py  ingestion.py  populate.py
homie/maps/: api.py  catalogs.py  populate.py
homie/processing/: apartment_data_processing.py
homie/scrappers/: apartmentbcn.py  generics.py  habitaclia.py  housinganywhere.py  idealista.py  populate.py  rightmove.py  spotahome.py  webscrapper.py
