[tool.poetry]
name = "homie"
version = "0.1.0"
description = ""
authors = [
  "Raphael Smyth <raphael.smith@bts.tech>",
  "Rogelio Martínez <aybabtumx@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
pandas = "^2.2.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
selenium = "^4.17.2"
googlemaps = "^4.10.0"
python-dotenv = "^1.0.1"
sqlmodel = "^0.0.14"
streamlit = "^1.31.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.15"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
